<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#f0f4c3"
tools:context=".fragment.AboutAppFragment">

<!-- TODO: Update blank fragment layout -->

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:padding="10sp"
        android:text="@string/marvelous_marvin_hagler"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgMarvin"
        android:layout_width="140dp"
        android:layout_height="130dp"
        android:src="@drawable/marvin"
        android:layout_below="@id/txtProfile"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/txtDescHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="5sp"
        android:text="@string/background"
        android:layout_below="@id/imgMarvin"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDescHeading"
        android:background="#b2ebf2"
        android:text="@string/marvinDesc"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:padding="5sp"
        android:layout_marginBottom="10dp"
        android:textIsSelectable="true"/>

    <TextView
        android:id="@+id/txtCareerHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="5sp"
        android:text="@string/boxing_career"
        android:layout_below="@id/txtDesc"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCareerDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtCareerHeading"
        android:background="#b2ebf2"
        android:text="@string/boxing_desc"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:padding="5sp"
        android:layout_marginBottom="10dp"
        android:textIsSelectable="true"/>

</RelativeLayout>


</ScrollView>